Implement User activation w/ account verification via token.
